--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /row_data
 /~$plomsk.docx
 /~WRL1215.tmp
+/JAVA_application/export
+/JAVA_application/Tester
+/JMBAG_detector_code/GAN
+/JMBAG_detector_code/test_model
+/JMBAG_detector_code/tmp_code
